--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
  <head>
   <meta charset="UTF-8">
-  <title>Flex</title>
+  <title></title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
