--- a/index.html
+++ b/index.html
@@ -27,38 +27,38 @@
      </header>
      <div class="row">
          <div class="column">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/falls2.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
-            <img src="images/nature.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
+            <img src="wedding.jpg" alt="">
+            <img src="rocks.jpg" alt="">
+            <img src="falls2.jpg" alt="">
+            <img src="paris.jpg" alt="">
+            <img src="nature.jpg" alt="">
+            <img src="paris.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/underwater.jpg" alt="">
-            <img src="images/ocean.jpg" alt="">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/mountainskies.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/mist.jpg" alt="">
-            <img src="images/underwater.jpg" alt="">
+            <img src="underwater.jpg" alt="">
+            <img src="ocean.jpg" alt="">
+            <img src="wedding.jpg" alt="">
+            <img src="mountainskies.jpg" alt="">
+            <img src="rocks.jpg" alt="">
+            <img src="mist.jpg" alt="">
+            <img src="underwater.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/falls2.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
-            <img src="images/nature.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
+            <img src="wedding.jpg" alt="">
+            <img src="rocks.jpg" alt="">
+            <img src="falls2.jpg" alt="">
+            <img src="paris.jpg" alt="">
+            <img src="nature.jpg" alt="">
+            <img src="paris.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/underwater.jpg" alt="">
-            <img src="images/ocean.jpg" alt="">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/mountainskies.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/mist.jpg" alt="">
-            <img src="images/underwater.jpg" alt="">
+            <img src="underwater.jpg" alt="">
+            <img src="ocean.jpg" alt="">
+            <img src="wedding.jpg" alt="">
+            <img src="mountainskies.jpg" alt="">
+            <img src="rocks.jpg" alt="">
+            <img src="mist.jpg" alt="">
+            <img src="underwater.jpg" alt="">
          </div>
      </div>
  </body>
