--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ko">
  <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>사진</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
          body{font-family: arial, sans-serif;}
          .header{text-align: center; padding: 30px;}
          .row{display: flex; flex-wrap: wrap; padding: 0 5px;}
-         .column{flex: 100%; max-width:100%; margin-bottom: 30px;}
+         
          .column img{margin-bottom: 8px;}
          @media screen and (min-width:600px){
              .column{flex:50%; max-width: 50%; padding:0 4px;}
@@ -18,6 +18,7 @@
          @media screen and (min-width:960px){
              .column{flex:25%; max-width: 25%;}
          }
+         .column{flex: 100%; max-width:100%; margin-bottom: 30px;}
      </style>
  </head>
  <body>
