--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
  <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
   <title>사진</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
