--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ko">
  <head>
   <meta charset="UTF-8">
-  <title></title>
+  <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
+  <title>Flex</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
