--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
-  <title>사진</title>
+  <title>최종 수정</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
@@ -15,11 +15,10 @@
          @media screen and (min-width:600px){
              .column{flex:50%; max-width: 50%; padding:0 4px;}
          }
-         
+
          @media screen and (min-width:960px){
              .column{flex:25%; max-width: 25%;}
          }
-         
      </style>
  </head>
  <body>
@@ -29,38 +28,38 @@
      </header>
      <div class="row">
          <div class="column">
-            <img src="wedding.jpg" alt="">
-            <img src="rocks.jpg" alt="">
-            <img src="falls2.jpg" alt="">
-            <img src="paris.jpg" alt="">
-            <img src="nature.jpg" alt="">
-            <img src="paris.jpg" alt="">
+            <img src="images/wedding.jpg" alt="">
+            <img src="images/rocks.jpg" alt="">
+            <img src="images/falls2.jpg" alt="">
+            <img src="images/paris.jpg" alt="">
+            <img src="images/nature.jpg" alt="">
+            <img src="images/paris.jpg" alt="">
          </div>
          <div class="column">
-            <img src="underwater.jpg" alt="">
-            <img src="ocean.jpg" alt="">
-            <img src="wedding.jpg" alt="">
-            <img src="mountainskies.jpg" alt="">
-            <img src="rocks.jpg" alt="">
-            <img src="mist.jpg" alt="">
-            <img src="underwater.jpg" alt="">
+            <img src="images/underwater.jpg" alt="">
+            <img src="images/ocean.jpg" alt="">
+            <img src="images/wedding.jpg" alt="">
+            <img src="images/mountainskies.jpg" alt="">
+            <img src="images/rocks.jpg" alt="">
+            <img src="images/mist.jpg" alt="">
+            <img src="images/underwater.jpg" alt="">
          </div>
          <div class="column">
-            <img src="wedding.jpg" alt="">
-            <img src="rocks.jpg" alt="">
-            <img src="falls2.jpg" alt="">
-            <img src="paris.jpg" alt="">
-            <img src="nature.jpg" alt="">
-            <img src="paris.jpg" alt="">
+            <img src="images/wedding.jpg" alt="">
+            <img src="images/rocks.jpg" alt="">
+            <img src="images/falls2.jpg" alt="">
+            <img src="images/paris.jpg" alt="">
+            <img src="images/nature.jpg" alt="">
+            <img src="images/paris.jpg" alt="">
          </div>
          <div class="column">
-            <img src="underwater.jpg" alt="">
-            <img src="ocean.jpg" alt="">
-            <img src="wedding.jpg" alt="">
-            <img src="mountainskies.jpg" alt="">
-            <img src="rocks.jpg" alt="">
-            <img src="mist.jpg" alt="">
-            <img src="underwater.jpg" alt="">
+            <img src="images/underwater.jpg" alt="">
+            <img src="images/ocean.jpg" alt="">
+            <img src="images/wedding.jpg" alt="">
+            <img src="images/mountainskies.jpg" alt="">
+            <img src="images/rocks.jpg" alt="">
+            <img src="images/mist.jpg" alt="">
+            <img src="images/underwater.jpg" alt="">
          </div>
      </div>
  </body>
