--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
-  <title>지용♥은선</title>
+  <title>♥</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
