--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
  </head>
  <body>
      <header class="header">
-        <h1>Responsive Image Gallery</h1>
+        <h1>Gallery</h1>
          <p>Resize the browser window to see the responsive effect.</p>
      </header>
      <div class="row">
+
          <div class="column">
-            <img src="images/wedding.jpg" alt="">
+            <img src="images/yongsun.jpg" alt="">
             <img src="images/rocks.jpg" alt="">
             <img src="images/falls2.jpg" alt="">
             <img src="images/paris.jpg" alt="">
