--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
-  <title>♥</title>
+  <title>지용♥은선</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
@@ -23,8 +23,8 @@
  </head>
  <body>
      <header class="header">
-        <h1>Gallery</h1>
-         <p>Resize the browser window to see the responsive effect.</p>
+        <h1>지용 은선 갤러리</h1>
+         <p>모바일 청첩장을 한번 만들어 볼까?</p>
      </header>
      <div class="row">
 
