--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
+  <meta property="og:title" content="지용♥은선"/>
+	<meta property="og:description" content="2020년 6월 27일 11시" />
+	<meta property="og:image" content="https://bonggeum.github.io/apsepoc/images/yongsun.jpg" />
   <title>지용♥은선</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
