--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
      <div class="row">
 
          <div class="column">
-            <img src="images/yongsun.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/falls2.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
-            <img src="images/nature.jpg" alt="">
+            <img src="images/yongsun1.jpg" alt="">
+            <img src="images/yongsun2.jpg" alt="">
+            <img src="images/yongsun3.jpg" alt="">
+            <img src="images/yongsun4.jpg" alt="">
+            <img src="images/yongsun5.jpg" alt="">
             <img src="images/paris.jpg" alt="">
          </div>
          <div class="column">
