--- a/index.html
+++ b/index.html
@@ -37,33 +37,27 @@
             <img src="images/yongsun3.jpg" alt="">
             <img src="images/yongsun4.jpg" alt="">
             <img src="images/yongsun5.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/underwater.jpg" alt="">
-            <img src="images/ocean.jpg" alt="">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/mountainskies.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/mist.jpg" alt="">
-            <img src="images/underwater.jpg" alt="">
+            <img src="images/yongsun1.jpg" alt="">
+            <img src="images/yongsun2.jpg" alt="">
+            <img src="images/yongsun3.jpg" alt="">
+            <img src="images/yongsun4.jpg" alt="">
+            <img src="images/yongsun5.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/falls2.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
-            <img src="images/nature.jpg" alt="">
-            <img src="images/paris.jpg" alt="">
+            <img src="images/yongsun1.jpg" alt="">
+            <img src="images/yongsun2.jpg" alt="">
+            <img src="images/yongsun3.jpg" alt="">
+            <img src="images/yongsun4.jpg" alt="">
+            <img src="images/yongsun5.jpg" alt="">
          </div>
          <div class="column">
-            <img src="images/underwater.jpg" alt="">
-            <img src="images/ocean.jpg" alt="">
-            <img src="images/wedding.jpg" alt="">
-            <img src="images/mountainskies.jpg" alt="">
-            <img src="images/rocks.jpg" alt="">
-            <img src="images/mist.jpg" alt="">
-            <img src="images/underwater.jpg" alt="">
+            <img src="images/yongsun1.jpg" alt="">
+            <img src="images/yongsun2.jpg" alt="">
+            <img src="images/yongsun3.jpg" alt="">
+            <img src="images/yongsun4.jpg" alt="">
+            <img src="images/yongsun5.jpg" alt="">
          </div>
      </div>
  </body>
