--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
          .header{text-align: center; padding: 30px;}
          .row{display: flex; flex-wrap: wrap; padding: 0 5px;}
          .column{flex: 100%; max-width:100%; margin-bottom: 30px;}
+         .column{flex:50%; max-width: 50%; padding:0 4px;}
          .column img{margin-bottom: 8px;}
          @media screen and (min-width:600px){
              .column{flex:50%; max-width: 50%; padding:0 4px;}
