--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:title" content="지용♥은선"/>
 	<meta property="og:description" content="2020년 6월 27일 11시" />
 	<meta property="og:image" content="https://bonggeum.github.io/apsepoc/images/yongsun.jpg" />
-  <title>지용♥은선</title>
+  <title>♥지용♥은선♥</title>
      <style>
          *{padding: 0; margin: 0; box-sizing: border-box;}
          img{max-width: 100%;}
