--- a/index.html
+++ b/index.html
@@ -1,65 +1,39 @@
 <!doctype html>
 <html lang="ko">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
-  <meta property="og:title" content="지용♥은선"/>
-	<meta property="og:description" content="2020년 6월 27일 11시" />
-	<meta property="og:image" content="https://bonggeum.github.io/apsepoc/images/yongsun.jpg" />
-  <title>지용♥은선</title>
-     <style>
-         *{padding: 0; margin: 0; box-sizing: border-box;}
-         img{max-width: 100%;}
-         body{font-family: arial, sans-serif;}
-         .header{text-align: center; padding: 30px;}
-         .row{display: flex; flex-wrap: wrap; padding: 0 5px;}
-         .column{flex: 100%; max-width:100%; margin-bottom: 30px;}
-         .column{flex:50%; max-width: 50%; padding:0 4px;}
-         .column img{margin-bottom: 8px;}
-         @media screen and (min-width:600px){
-             .column{flex:50%; max-width: 50%; padding:0 4px;}
-         }
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
+	<meta property="og:title" content="은선의 Github"/>
+	<meta property="og:description" content="포트폴리오 겸 공부 github입니다." />
+	<meta property="og:image" content="https://bonggeum.github.io/apsepoc/images/og_img.jpg" />
+	<title>은선의 Github</title>
+	<style>
+		*{padding: 0; margin: 0; box-sizing: border-box;}
+		img{max-width: 100%;}
+		body{font-family: arial, sans-serif;}
+		.header{text-align: center; padding: 30px;}
 
-         @media screen and (min-width:960px){
-             .column{flex:25%; max-width: 25%;}
-         }
-     </style>
- </head>
- <body>
-     <header class="header">
-        <h1>지용 은선 갤러리</h1>
-         <p>모바일 청첩장을 한번 만들어 볼까?</p>
-     </header>
-     <div class="row">
+		/* 600픽셀 이상 */
+		@media screen and (min-width:600px){
 
-         <div class="column">
-            <img src="images/yongsun1.jpg" alt="">
-            <img src="images/yongsun2.jpg" alt="">
-            <img src="images/yongsun3.jpg" alt="">
-            <img src="images/yongsun4.jpg" alt="">
-            <img src="images/yongsun5.jpg" alt="">
-         </div>
-         <div class="column">
-            <img src="images/yongsun5.jpg" alt="">
-            <img src="images/yongsun4.jpg" alt="">
-            <img src="images/yongsun3.jpg" alt="">
-            <img src="images/yongsun2.jpg" alt="">
-            <img src="images/yongsun1.jpg" alt="">
-         </div>
-         <div class="column">
-            <img src="images/yongsun3.jpg" alt="">
-            <img src="images/yongsun2.jpg" alt="">
-            <img src="images/yongsun1.jpg" alt="">
-            <img src="images/yongsun4.jpg" alt="">
-            <img src="images/yongsun5.jpg" alt="">
-         </div>
-         <div class="column">
-            <img src="images/yongsun4.jpg" alt="">
-            <img src="images/yongsun5.jpg" alt="">
-            <img src="images/yongsun2.jpg" alt="">
-            <img src="images/yongsun1.jpg" alt="">
-            <img src="images/yongsun4.jpg" alt="">
-         </div>
-     </div>
- </body>
+		}
+		/* 960픽셀 이상 */
+		@media screen and (min-width:960px){
+
+		}
+	</style>
+</head>
+<body>
+	<div class="wrap">
+		<header class="header">
+			<h1>은선의 github</h1>
+			<p>2020년 1월 21일 생성</p>
+		</header>
+		<section>
+			<div class="content">
+				내용내용내용1
+			</div>
+		</section>
+	</div>
+</body>
 </html>
