--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=divice-width,initial-scale=1.5,minimum-scale=1.0,maximum-scale=1.0">
-	<meta property="og:title" content="은선의 Github"/>
-	<meta property="og:description" content="포트폴리오 겸 공부 github입니다." />
-	<meta property="og:image" content="https://bonggeum.github.io/apsepoc/images/og_img.jpg" />
-	<title>은선의 Github</title>
-	<style>
-		*{padding: 0; margin: 0; box-sizing: border-box;}
-		img{max-width: 100%;}
-		body{font-family: arial, sans-serif;}
-		.header{text-align: center; padding: 30px;}
-
-		/* 600픽셀 이상 */
-		@media screen and (min-width:600px){
-
-		}
-		/* 960픽셀 이상 */
-		@media screen and (min-width:960px){
-
-		}
-	</style>
+    <meta charset="UTF-8">
+    <title>Name overflow</title>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="../js/jquery-1.12.4.min.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-	<div class="wrap">
-		<header class="header">
-			<h1>은선의 github</h1>
-			<p>2020년 1월 21일 생성</p>
-		</header>
-		<section>
-			<div class="content">
-				내용내용내용1
-			</div>
-		</section>
-	</div>
+    <div class="wrapper">
+        <div class="content-text">
+            <div class="first__name">
+                <div class="text__name">jiyong</div>
+            </div>
+            <div class="second__name">
+                <div class="text__name">sunny</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
